--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,41 @@
-name: CI
+name: ci
 
 on:
-  pull_request:
   push:
-    branches: [ main, dev ]
+  pull_request:
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10.18.3
-
-      - name: Use Node 20
-        uses: actions/setup-node@v4
+      # Node + pnpm (ให้ pnpm อ่านเวอร์ชันจาก package.json)
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: Install deps
-        run: pnpm install --frozen-lockfile
-
-      - name: Turbo cache
-        uses: actions/cache@v4
+      - uses: pnpm/action-setup@v4
         with:
-          path: |
-            .turbo
-            **/node_modules/.cache
-          key: turbo-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml', '**/turbo.json') }}
-          restore-keys: |
-            turbo-${{ runner.os }}-
+          run_install: false   # ติดตั้งทีหลัง
 
-      - name: Build
-        run: pnpm build
+      # ติดตั้ง Flutter
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: '3.9.4'   # ปรับตามโปรเจกต์
+          cache: true
 
-      - name: Lint
-        run: pnpm lint
+      - run: flutter config --enable-web
+      - run: flutter --version
 
-      - name: Test
-        run: pnpm test
+      # ติดตั้ง deps ของ workspace
+      - run: pnpm install
+
+      # ดึง pub ของแอพ Flutter (กันเหนียว)
+      - working-directory: apps/web_flutter
+        run: flutter pub get
+
+      # build ทั้ง monoreโป
+      - run: pnpm build
