feat: add AppService and update module configuration; enhance TypeScript settings

--- a/apps/api-nest/tsconfig.json
+++ b/apps/api-nest/tsconfig.json
@@ -2,8 +2,11 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "../..",
     "moduleResolution": "node"
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "../../packages/shared-types/src"
+  ]
 }
