--- a/apps/api-nest/tsconfig.build.json
+++ b/apps/api-nest/tsconfig.build.json
@@ -1,4 +1,13 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "**/*spec.ts", "dist"]
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist"
+  },
+  "exclude": [
+    "node_modules",
+    "test",
+    "**/*.spec.ts",
+    "../../packages/shared-types/src"
+  ]
 }
